--- a/templates/main/base3.html
+++ b/templates/main/base3.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}PetVet Admin{% endblock %}</title>
-  
+    <link rel="icon" href="{% static 'assets/images/paw.png' %}?v=2" type="image/png">
+
     <link rel="stylesheet" href="{% static 'assets/css/admin.css' %}">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     {% block extra_head %}{% endblock %}
