--- a/templates/authUser/forgot_passwordunauth.html
+++ b/templates/authUser/forgot_passwordunauth.html
@@ -6,6 +6,7 @@
     <title>Forgot Password | PetVet</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" href="{% static 'assets/images/paw.png' %}?v=2" type="image/png">
     <style>
         :root {
             --primary: #4CAF50;
